2012-09-19  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py, src/agilezen.py, src/omnifocus.py:
	Synchronize an OmniFocus project's task contexts as tags in its
	AgileZen story.

	* src/omnifocus2agilezen.py: Include start and due dates in
	AgileZen tasks, which fixes the handling of repeated tasks.  Stop
	ignoring singleton task holder projects.

2012-09-17  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/agilezen.py, src/omnifocus2agilezen.py: Keep completed tasks
	in AgileZen, and synchronize task statuses both ways.

2012-09-12  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/agilezen.py, src/omnifocus2agilezen.py: Replace asserts with
	logging.  Use a custom logger instead of the root logger.

	* src/omnifocus2agilezen.py: Add the --owner option to set the
	username of the owner to assign to every story.

2012-09-11  Romain Lenglet  <romain.lenglet@berabera.info>

	* README: Update the description of status synchronization.

	* src/omnifocus2agilezen.py, src/agilezen.py: Keep "ready"
	projects on-hold instead of active in OmniFocus.  Only "in
	progress" projects are now active in OmniFocus.

2012-09-05  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py, src/agilezen.py: Add the
	--api-base-url and --disable-verify-ssl-cert command-line options
	for troubleshooting.

2012-08-29  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/agilezen.py: Use Requests sessions to maintain keep-alive
	connections to AgileZen.

2012-08-21  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py (main): Modified the -p/--project
	command-line option to take a numerical project ID instead of a
	project name.

2012-08-20  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/omnifocus2agilezen.py: Limit the cases where an AgileZen
	story's tasks are reordered, especially in the case a task is
	completed or deleted in OmniFocus.
